# psrdada

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.am  aclocal.m4  bootstrap  cmake_config.h.in  configure.ac  configure.in  cudalt.py  dada_db.c  dada_db.h  dada_dbdisk.c  dependencies.txt  greps
apps/: CMakeLists.txt  Makefile.am  dada_db.c  dada_dbgpu.c  dada_dbib.c  dada_dbmergedb.c  dada_dbmetric.c  dada_dboverflow.c  dada_dbrecover.c  dada_dbscrubber.c  dada_dbud.c  dada_dbxferinfo.c  dada_diskdb.c  dada_edit.c  dada_header.c  dada_ibdb.c  dada_numdb.c  dada_pwc_command.c  dada_udgen.c  dada_udheader.c  dspsr_start_time.c  ipcrme  slow_rm.c  test_disk_perf.c
apsr/config/: 1machine.cfg  1machine.spec  3machine.cfg  3machine.spec  Makefile.am  apsr.cfg.in  apsr.info  apsr.scratch  dbdisk.scratch  dspsr.cal  dspsr.default  dspsr.fourth  dspsr.giant  dspsr.giant.in  dspsr.magnetar  dspsr.old_optimal  dspsr.optimal  dspsr.single  dspsr.singleF  dspsr.singleF.in  multi.txt  names_J0024-7204.txt  pdfb3_256_256_2048  singleF.psh  specification_to_header.txt  test_dada.cfg  test_specification.txt
apsr/scripts/: Apsr.pm  Dada.pm  Makefile.am  apsr_hard_reset.pl  apsr_reconfigure.pl  check_perl_syntax.csh  checkpulse.psh  client_apsr_archive_manager.pl  client_apsr_aux_manager.pl  client_apsr_auxiliary_manager.pl  client_apsr_background_processor.pl  client_apsr_command.pl  client_apsr_disk_cleaner.pl  client_apsr_gain_controller.pl  client_apsr_master_control.pl  client_apsr_monitor.pl  client_apsr_observation_manager.pl  client_apsr_processing_manager.pl  client_apsr_src_logger.pl  client_apsr_sys_logger.pl  client_apsr_transfer_manager.pl  client_archive_manager.pl  client_background_processor.pl  client_control.pl  client_gain_controller.pl  client_monitor.pl  client_observation_manager.pl  client_processing_manager.pl  dspsr_command_line.pl  gain_hacker.pl  raid_apsr_bands_finished.pl  raid_apsr_cleaner.pl  raid_apsr_psrfits_converter.pl  raid_apsr_psrfits_patcher.pl  raid_apsr_swin_transferrer.pl  server_apsr_P778_transfer_manager.pl  server_apsr_aux_manager.pl  server_apsr_auxiliary_manager.pl  server_apsr_band_processor.pl  server_apsr_create_plots.pl  (+21 more)
apsr/src/: Makefile.am  apsr_dbtriripple.c  apsr_dbtriwave.c  apsr_dbudp.c  apsr_def.h  apsr_edit.csh  apsr_rm.csh  apsr_test_triwave.c  apsr_udp.c  apsr_udp.h  apsr_udpdb.c  apsr_udpdb.h  apsr_udpdisk.c  apsr_udpdisk.h  apsr_udpgenerator.c  apsr_udpheader.c  apsr_udpheader.h  bat_to_utc.c  test_boardudp.c
apsr/web/: Makefile.am  apsr.css  apsr.lib.php  apsr_functions_i.php  apsr_webpage.lib.php  backend_state_window.lib.php  config_edit.lib.php  control.lib.php  custom_plot.lib.php  custom_plot.php  definitions_i.php  download_archives.php  download_obs.php  gain_reporter.php  gain_update.php  gains.lib.php  ganglia_window.lib.php  index.php  infoupdate.php  infowindow.php  log_list.lib.php  log_viewer.php  logheader.php  logwindow.php  machine_status.php  machine_summary.lib.php  observation_summary.lib.php  observations.php  oldresult.php  oldresults.php  pgwebplot.php  plot_window.lib.php  plotupdate.php  plotwindow.php  process_obs.lib.php  processresult.php  psr_catalogue.php  raid_archival.lib.php  result.lib.php  result.php  (+6 more)
bpsr/config/: DSPSR.CAL  Makefile.am  SURVEY.MULTIBEAM  THEDECIMATOR  bpsr.cfg  bpsr.cfg.in  bpsr_128ch_128us_1b  bpsr_128ch_256us_1b  bpsr_128ch_512us_1b  bpsr_128ch_64us_1b  bpsr_256ch_128us_1b  bpsr_256ch_64us_1b  bpsr_cornerturn.cfg  bpsr_pwcs.cfg  bpsr_svd.cfg  dspsr.testobs  ibob.cfg  roach.cfg
bpsr/mon/: Makefile.am  compute_extremes.c  create_outputname.c  create_xaxis.c  display_help.c  do_mmm.c  do_powerspec.c  get_commandline.c  plot4mon.c  plot4mon.h  plot_stream_1D.c  plot_stream_2D.c  read_params.c  read_stream.c  work_on_data.c
bpsr/scripts/: Bpsr.pm  (+77 more)
scripts/: Dada.pm  Dada.py  Makefile.am  client_archive_manager.pm  client_auxiliary_manager.pl  client_auxiliary_manager.pm  client_auxiliary_processor.pl  client_background_processor.pm  client_command.pl  client_disk_cleaner.pm  client_gain_controller.pm  client_logger.pm  client_master_control.pl  client_master_control.pm  client_observation_manager.pm  client_processing_manager.pm  client_src_logger.pl  client_sys_logger.pl  convert_radians_to_degrees.pl  dada_master_control.pl  dada_reconfigure.pl  gain_hacker.pl  om_custom_report.csh  server_auxiliary_manager.pm  server_gain_manager.pm  server_general_dir_archiver.pm  server_general_file_archiver.pm  server_logger.pm  server_pwc_monitor.pl  server_pwc_monitor.pm  server_results_manager.pm  server_src_monitor.pl  server_sys_monitor.pl  server_sys_monitor.pm  server_tape_archiver.pm  server_tape_controller.pm  server_tcs_interface.pm  server_transfer_manager.pm  server_web_monitor.pm  tapes.pm
src/: CMakeLists.txt  Makefile  Makefile.am  ascii_header.c  ascii_header.h  command_parse.c  command_parse.h  command_parse_server.c  command_parse_server.h  dada_affinity.c  dada_affinity.h  dada_client.c  dada_client.h  dada_corrplot.c  dada_cuda.cu  dada_cuda.h  dada_cuda.losave  dada_db.c  dada_dbNdb.c  dada_dbcopydb.c  dada_dbdisk.c  dada_dbevent.c  dada_dbgpu.c  dada_dbib.c  dada_dbmeminfo.c  dada_dbmergedb.c  dada_dbmetric.c  dada_dbmonitor.c  dada_dbnic.c  dada_dbnull.c  dada_dbnum.c  dada_dboverflow.c  dada_dbrecover.c  dada_dbscrubber.c  dada_dbtriwave.c  dada_dbud.c  dada_dbudp.c  dada_dbxferinfo.c  dada_def.h  dada_diskdb.c  (+99 more)
web/: Makefile.am  admin.html  admin.lib.php  annotate_obs.php  caspsr_admin.lib.php  client_status.php  commandeer.php  controlwindow.php  dada.css  dada_webpage.lib.php  definitions_i.php  definitions_i.php.in  functions_i.php  index.html  index.lib.php  index.php  infoupdate.php  infowindow.php  instrument.lib.php  instrument.php  instrument_i.php  instrument_update.php  logheader.php  logwindow.php  machine_status.php  plotwindow.php  result.php  results.php  secure_i.php  server_statuswindow.php  site_definitions_i.php  statebanner.php  stateupdate.php  statusupdate.php  statuswindow.php  style.css  style_log.css  style_viewer.css
(+827 files in other folders)
