
# scripts distributed as is (installed in bin/)
dist_bin_SCRIPTS = client_auxiliary_manager.pl \
                   client_auxiliary_processor.pl \
                   client_command.pl \
                   client_master_control.pl \
                   client_src_logger.pl \
                   client_sys_logger.pl \
                   Dada.pm \
                   dada_reconfigure.pl \
                   gain_hacker.pl \
                   machine_status.pl \
                   server_pwc_monitor.pl \
                   server_src_monitor.pl \
                   server_sys_monitor.pl
