webdir = $(prefix)/web

# scripts distributed as is (installed in bin/)
dist_web_SCRIPTS =  annotate_obs.php \ 
                    banner.php \
                    client_status.php \
                    commandeer.php \
                    controlwindow.php \
                    definitions_i.php \
                    footer_i.php \
                    functions_i.php \
                    header_i.php \
                    index.php \
                    infoupdate.php \
                    infowindow.php \
                    instrument.php \
                    logheader.php \
                    logwindow.php \
                    machine_status.php \
                    plotwindow.php \
                    result.php \
                    results.php \
                    secure_i.php \
                    statebanner.php \
                    stateupdate.php \
                    statusupdate.php \
                    statuswindow.php \
                    style.css \
                    style_viewer.css \
                    style_log.css

# data file (config) distributed as is
# dist_data_DATA = psrchive_version

nobase_dist_web_SCRIPTS = control/client_command.php \
                          control/control.php \
                          control/index.php \
                          control/server_command.php \
                          images/apsr_logo_1x60.png \
                          images/apsr_logo_480x60.png \
                          images/blankimage.gif \
                          images/border-2.gif \
                          images/border.gif \
                          images/bpsr_logo_1x60.png \
                          images/bpsr_logo_480x60.png \
                          images/gb_left.png \
                          images/gb.png \
                          images/gb_pressed.jpg \
                          images/gb_pressed_left.jpg \
                          images/gb_pressed_right.jpg \
                          images/gb_right.png \
                          images/green_light.png \
                          images/red_light.png \
                          images/yellow_light.png \
                          images/jsprogress/custom1_bar.gif \
                          images/jsprogress/custom1_box.gif \
                          images/jsprogress/percentImage_back1_80.png \
                          images/jsprogress/percentImage_back1.png \
                          images/jsprogress/percentImage_back2_80.png \
                          images/jsprogress/percentImage_back2.png \
                          images/jsprogress/percentImage_back3_80.png \
                          images/jsprogress/percentImage_back3.png \
                          images/jsprogress/percentImage_back4_80.png \
                          images/jsprogress/percentImage_back4.png \
                          images/jsprogress/percentImage_back.png \
                          images/jsprogress/percentImage.png \
                          images/jsprogress/icons/add.gif \
                          images/jsprogress/icons/empty.gif \
                          images/jsprogress/icons/fill.gif \
                          images/jsprogress/icons/get.gif \
                          images/jsprogress/icons/minus.gif \
                          images/jsprogress/icons/set.gif \
                          js/jsProgressBarHandler.js \
                          js/prototype.js \
                          js/wz_tooltip.js \
                          plots/.empty \
                          session/.empty \
                          status/.empty 
