
# scripts distributed as is (installed in share/)
data_DATA = apsr.cfg

dist_data_DATA = apsr.info \
                 apsr.viewer \
                 dspsr.cal \
                 dspsr.default \
                 dspsr.optimal \
                 pdfb3_1024_1024_2048 \
                 pdfb3_1024_256_2048 \
                 pdfb3_2048_512_2048 \
                 pdfb3_512_512_2048 \
                 pdfb3_256_256_2048

nobase_dist_data_DATA = testing/CAL.spec \
                        testing/J0437_1405MHz.spec \
                        testing/J0437_2500MHz_dbdisk.spec \
                        testing/J0437_2500MHz.spec



