
# scripts distributed as is (installed in bin/)
dist_bin_SCRIPTS = client_archive_manager.pl \
                   client_background_processor.pl \
                   client_gain_controller.pl \
                   client_monitor.pl \
                   client_observation_manager.pl \
                   client_processing_manager.pl \
                   server_aux_manager.pl \
                   server_create_plots.pl \
                   server_dfb_gain_simulator.pl \
                   server_gain_controller.pl \
                   server_process_result.pl \
                   server_results_manager.pl \
                   web_style.txt \
                   server_apsr_tcs_interface.pl \
                   gain_hacker.pl
