
# scripts distributed as is (installed in bin/)
dist_bin_SCRIPTS = Apsr.pm \
                   client_apsr_command.pl \
                   client_apsr_src_logger.pl \
                   client_apsr_sys_logger.pl \
                   client_apsr_master_control.pl \
                   client_apsr_archive_manager.pl \
                   client_apsr_aux_manager.pl \
                   client_apsr_background_processor.pl \
                   client_apsr_gain_controller.pl \
                   client_apsr_monitor.pl \
                   client_apsr_observation_manager.pl \
                   client_apsr_processing_manager.pl \
                   server_apsr_aux_manager.pl \
                   server_apsr_create_plots.pl \
                   server_apsr_dfb_gain_simulator.pl \
                   server_apsr_gain_manager.pl \
                   server_apsr_process_result.pl \
                   server_apsr_results_manager.pl \
                   server_apsr_tcs_interface.pl \
                   server_apsr_pwc_monitor.pl \
                   server_apsr_src_monitor.pl \
                   server_apsr_sys_monitor.pl \
                   apsr_reconfigure.pl \
                   dspsr_command_line.pl \
                   web_style.txt \
                   gain_hacker.pl
