
webdir = $(prefix)/web/apsr

nobase_dist_web_SCRIPTS = definitions_i.php \
                          plotupdate.php \
                          plotwindow.php \
                          processresult.php \
                          result.php \
                          results.php \
                          infowindow.php \
                          infoupdate.php \
                          gain_reporter.php \
                          gain_update.php \
                          testing/configuration.php \
                          testing/display_text_file.php \
                          testing/index.php \
                          testing/simulator.php


